--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,6 +10,11 @@ pipeline {
             steps {
                 sh 'npm run build --prod'
             }
-        }              
+        }
+        stage('Deploy') {
+            steps {
+                sh 'cp ./dist/project/* ../../../../www/html/'
+            }
+        }          
     }
 }
