--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,12 +3,12 @@ pipeline {
     stages {
         stage('Docker Build') {
             steps {
-                 sh 'docker build -t angular-test .'
+                 echo 'Hello'
             }
         }
          stage('Docker Run') {
             steps {
-                 sh 'docker run --name angular-test -d -p 8080:80 angular-test'
+                echo 'Hello'
             }
         }
     }
