--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,12 +1,10 @@
 
-String branchName = "$BRANCH_NAME".toLowerCase()
-
 pipeline {
     environment {
         APP_NAME = 'angular-test-code'
         JENKINSFILE_LOCATION = 'JenkinsFile'
         DOCKER_REGISTRY = 'gauravmathur1/angular-test-docker'
-        VERSION="$branchName-$BUILD_NUMBER"
+        VERSION="$BRANCH_NAME-$BUILD_NUMBER"
         registryCredential = 'dockerhub'
         dockerImage = ''
     }
