--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,7 +19,7 @@ pipeline {
         }
         stage('Docker Run') {
             steps {
-               sh "docker run -d -p 8081:80 ""${DOCKER_REGISTRY}" + ":${VERSION}"""
+               dockerImage.run("-p 8081:80")
             }
         }
         stage('Image push to Artifactory') {
