--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,7 +20,7 @@ pipeline {
         }
         stage('Docker Run') {
             steps {
-                sh "docker stop $(docker ps -a -q)"
+                sh 'docker stop $(docker ps -a -q)'
                 script {
                     dockerImage.run("-p 8081:80")
                 }
