--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,4 +1,3 @@
-String branchName = "$BRANCH_NAME".toLowerCase()
 pipeline {
     environment {
         APP_NAME = 'angular-test-code'
@@ -12,7 +11,7 @@ pipeline {
     stages {    
         stage('Docker Build') {
             steps {
-                echo $branchName
+                echo 'Pulling...' + env.BRANCH_NAME
                 script {
                      dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${VERSION}"
                 }
