--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,9 +11,9 @@ pipeline {
     stages {    
         stage('Docker Build') {
             steps {
-                sh 'printenv'
+                String branch = ${GIT_BRANCH}.split('/')
                 script {
-                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${GIT_BRANCH}-${VERSION}"
+                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${branch[1]}-${VERSION}"
                 }
             }
         }
@@ -36,7 +36,7 @@ pipeline {
          }
          stage('Remove Unused Docker image') {
             steps{
-                sh "docker rmi $DOCKER_REGISTRY:$GIT_BRANCH-$BUILD_NUMBER"
+                sh "docker rmi $DOCKER_REGISTRY:${branch[1]}-$BUILD_NUMBER"
             }
         }
     }
