--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,5 @@
 
-String branch = ${GIT_BRANCH}.split('/')
+
 pipeline {
     environment {
         APP_NAME = 'angular-test-code'
@@ -14,7 +14,7 @@ pipeline {
         stage('Docker Build') {
             steps {
                 script {
-                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${branch[1]}-${VERSION}"
+                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${NODE_LABELS}-${VERSION}"
                 }
             }
         }
@@ -37,7 +37,7 @@ pipeline {
          }
          stage('Remove Unused Docker image') {
             steps{
-                sh "docker rmi $DOCKER_REGISTRY:${branch[1]}-$BUILD_NUMBER"
+                sh "docker rmi $DOCKER_REGISTRY:${NODE_LABELS}-$BUILD_NUMBER"
             }
         }
     }
