--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,5 @@
 
 
-def branch = $GIT_BRANCH.split("/") 
 pipeline {
     environment {
         APP_NAME = 'angular-test-code'
@@ -15,7 +14,7 @@ pipeline {
         stage('Docker Build') { 
             steps {
                 script {
-                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${branch[1]}-${VERSION}"
+                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${$BRANCH_NAME}-${VERSION}"
                 }
             }
         }
@@ -38,7 +37,7 @@ pipeline {
          }
          stage('Remove Unused Docker image') {
             steps{
-                sh "docker rmi $DOCKER_REGISTRY:${branch[1]}-$BUILD_NUMBER"
+                sh "docker rmi $DOCKER_REGISTRY:${$BRANCH_NAME}-$BUILD_NUMBER"
             }
         }
     }
