--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,8 @@ pipeline {
         stage('Docker Build') { 
             steps {
                 script {
-                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${env.$BRANCH_NAME}-${VERSION}"
+                     def branch = $GIT_BRANCH.split("/") 
+                     dockerImage = docker.build "${DOCKER_REGISTRY}" + ":${branch[1]}-${VERSION}"
                 }
             }
         }
@@ -37,7 +38,7 @@ pipeline {
          }
          stage('Remove Unused Docker image') {
             steps{
-                sh "docker rmi $DOCKER_REGISTRY:${env.$BRANCH_NAME}-$BUILD_NUMBER"
+                sh "docker rmi $DOCKER_REGISTRY:${branch[1]}-$BUILD_NUMBER"
             }
         }
     }
