--- a/JenkinsFile
+++ b/JenkinsFile
@@ -41,5 +41,28 @@ pipeline {
                 sh "docker rmi $DOCKER_REGISTRY:$BUILD_NUMBER"
             }
         }
+        stage("Stage with input") {
+            steps {
+            def userInput = false
+                script {
+                    def userInput = input(id: 'Proceed1', message: 'Promote build?', parameters: [[$class: 'BooleanParameterDefinition', defaultValue: true, description: '', name: 'Please confirm you agree with this']])
+                    echo 'userInput: ' + userInput
+                    emailext (
+                    subject: "Waiting for your Approval! Job: '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
+                    body: """<p>STARTED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
+                                <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>""",
+                    to: "gauravmathur77@gmail.com",
+                    recipientProviders: [[$class: 'DevelopersRecipientProvider']]
+                    )
+                    if(userInput == true) {
+                        // do action
+                    } else {
+                        // not do action
+                        echo "Action was aborted."
+                    }
+
+                }    
+            }  
+        }
     }
 }
