--- a/JenkinsFile
+++ b/JenkinsFile
@@ -45,7 +45,7 @@ pipeline {
             steps {
             def userInput = false
                 script {
-                    def userInput = input(id: 'Proceed1', message: 'Promote build?', parameters: [[$class: 'BooleanParameterDefinition', defaultValue: true, description: '', name: 'Please confirm you agree with this']])
+                    userInput = input(id: 'Proceed1', message: 'Promote build?', parameters: [[$class: 'BooleanParameterDefinition', defaultValue: true, description: '', name: 'Please confirm you agree with this']])
                     echo 'userInput: ' + userInput
                     emailext (
                     subject: "Waiting for your Approval! Job: '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
