--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec: 
       containers: 
       - name: angular 
-        image: gauravmathur1/angular-test-docker:95 
+        image: gauravmathur1/angular-test-docker:tagVersion
         ports: 
         - containerPort: 80 
