--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec: 
       containers: 
       - name: angular 
-        image: gauravmathur1/angular-test-docker:tagVersion
+        image: gauravmathur1/angular-test-docker:{{BUILD_NUMBER}}
+        imagePullPolicy: Always
         ports: 
         - containerPort: 80 
